# cloud-sheets-slim

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py  tempalte.env
.github/workflows/: publish-to-test-pypi.yml
cloud_sheets_slim/: __init__.py  cloud_sheets_base.py  google_sheets.py  pandas_proxy.py
tests/: test_google_sheets.py  test_pandas_proxy.py
