[tool.poetry]
name = "cloud_sheets_slim"
version = "0.1.3"
description = "A lightweight cloud sheets operation library"
authors = ["Ying Cai <i@caiying.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.1.4"
oauth2client = "^4.1.3"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
